# banshee

./: .gitignore  Cargo.toml  README.md
src/: collector.rs  config.rs  data.rs  inference.rs  input.rs  logger.rs  main.rs  output.rs  processor.rs
src/config/: core.rs  endpoint.rs
src/data/: final_sample.rs  fragment.rs  session.rs  stored_result.rs
